**Releases:

v7.x-1.1
---------
- Fix in recalculate attest

v7.x-1.0
---------
- First initial release


**Unreleased:
(check also forum, blog and projectstatus - issues and tickets)