@@ -2,7 +2,7 @@ name = SODA
 description = Implementeer het SODA-waardensysteem in de begeleiding van je leerlingen. Dit is onderdeel van het LVS.
 core = 7.x
 package = argus - a Quality control extension
-version = 7.x-1.1
+version = 7.x-1.2
 project = argus_soda
 files[] = argus_soda.install
 files[] = argus_soda.module
