@@ -15,13 +15,12 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
-
-const SODA_parts = array(
-			'stiptheid (SODA)' => 'Stiptheid',
-			'orde (SODA)' => 'Orde',
-			'discipline (SODA)' => 'Discipline',
-			'attitude (SODA)' => 'Attitude',
-	);
+const SODA_parts = array (
+		'stiptheid (SODA)' => 'Stiptheid',
+		'orde (SODA)' => 'Orde',
+		'discipline (SODA)' => 'Discipline',
+		'attitude (SODA)' => 'Attitude' 
+);
 
 /* Drupal Hooks */
 
@@ -278,8 +277,8 @@ function argus_soda_reports_overview($param0 = NULL, $param1 = NULL) {
 	
 	// Get reports for selected class or first class (of application)
 	$pupils = argus_klasbeheer_get_pupils ( $param1 );
-	foreach ( $pupils as $u ) {
-		$data ['reports'] [$param1] [$u->id] = argus_soda_get_report ( $u->id );
+	foreach ( $pupils as $uid ) {
+		$data ['reports'] [$param1] [$uid] = argus_soda_get_report ( $uid );
 		
 		if (module_exists ( 'argus_meldingen' )) {
 			$startdate = $schoolyear ['start'];
@@ -291,66 +290,86 @@ function argus_soda_reports_overview($param0 = NULL, $param1 = NULL) {
 					if (variable_get ( 'period_' . $y . '_shortname' ) == variable_get ( 'argus_soda_periods_' . $x ) ['D' . $x]) {
 						$startdate = $periods [variable_get ( 'period_' . $y . '_shortname' )] ['startdate'];
 						$enddate = $periods [variable_get ( 'period_' . $y . '_shortname' )] ['enddate'];
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['title'] = $periods [variable_get ( 'period_' . $y . '_shortname' )] ['fullname'];
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['total'] = 0;
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['ticketing']['stiptheid (SODA)'] = array();
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['title'] = $periods [variable_get ( 'period_' . $y . '_shortname' )] ['fullname'];
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['total'] = 0;
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['stiptheid (SODA)'] = array ();
 					}
 				}
 				
 				// Set details 'S'
 				$codes = array (
-						'L'
+						'L' 
 				);
 				$total = 0;
 				foreach ( $codes as $code ) {
 					$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND am = :code AND datum BETWEEN :startdate AND :enddate';
 					$result = db_query ( $query, array (
-							':uid' => $u->id,
+							':uid' => $uid,
 							':code' => $code,
 							':startdate' => $startdate,
-							':enddate' => $enddate
+							':enddate' => $enddate 
 					) );
 					$total += $result->rowCount ();
 					$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND pm = :code AND datum BETWEEN :startdate AND :enddate';
 					$result = db_query ( $query, array (
-							':uid' => $u->id,
+							':uid' => $uid,
 							':code' => $code,
 							':startdate' => $startdate,
-							':enddate' => $enddate
+							':enddate' => $enddate 
 					) );
-					if ($result->rowCount ()){
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['total'] += $result->rowCount ();
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['ticketing']['stiptheid (SODA)'][] = $result->rowCount () . ' x te laat';
+					if ($result->rowCount ()) {
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['total'] += $result->rowCount ();
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['stiptheid (SODA)'] [] = $result->rowCount () . ' x te laat';
 					}
 				}
 				
 				$codes = array (
-						'B'
+						'B' 
 				);
 				$total = 0;
 				foreach ( $codes as $code ) {
 					$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND am = :code AND datum BETWEEN :startdate AND :enddate';
 					$result = db_query ( $query, array (
-							':uid' => $u->id,
+							':uid' => $uid,
 							':code' => $code,
 							':startdate' => $startdate,
-							':enddate' => $enddate
+							':enddate' => $enddate 
 					) );
 					$total += $result->rowCount ();
 					$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND pm = :code AND datum BETWEEN :startdate AND :enddate';
 					$result = db_query ( $query, array (
-							':uid' => $u->id,
+							':uid' => $uid,
 							':code' => $code,
 							':startdate' => $startdate,
-							':enddate' => $enddate
+							':enddate' => $enddate 
 					) );
-					if ($result->rowCount ()){
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['total'] += $result->rowCount ();
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['ticketing']['stiptheid (SODA)'][] = $result->rowCount () . ' x B-code';
+					if ($result->rowCount ()) {
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['total'] += $result->rowCount ();
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['stiptheid (SODA)'] [] = $result->rowCount () . ' x B-code';
 					}
 				}
 				
-				foreach (SODA_parts as $soda_part => $title){
+				/* ---------- Calculate 'positief gedrag' ---------- */
+				$query = 'SELECT n.nid AS id FROM {node} AS n
+						LEFT JOIN {field_data_field_lvs_melding_leerling} AS l ON l.entity_id = n.nid
+						LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id
+						LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id
+						WHERE l.field_lvs_melding_leerling_target_id = :uid
+						AND b.field_lvs_melding_betreft_value = :about
+						AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate
+						GROUP BY n.uid';
+				$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['positief gedrag'] = db_query ( $query, array (
+						':uid' => $uid,
+						':about' => 'positief gedrag',
+						':startdate' => $startdate,
+						':enddate' => $enddate
+				) )->fetchCol();
+					
+				if (count($data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['positief gedrag']) == 0){
+					$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['positief gedrag'] = array('x');
+				}
+				
+				foreach ( SODA_parts as $soda_part => $title ) {
 					if ($soda_part != 'stiptheid (SODA)') {
 						$query = 'SELECT l.entity_id AS id, o.field_lvs_melding_onderwerp_value AS title, n.uid AS author, d.field_lvs_melding_datum_feit_value AS factdate, p.field_lvs_melding_prive_value AS private, v.field_lvs_melding_verslag_value AS report ';
 						$query .= 'FROM {field_data_field_lvs_melding_leerling} AS l ';
@@ -363,15 +382,17 @@ function argus_soda_reports_overview($param0 = NULL, $param1 = NULL) {
 						$query .= 'WHERE l.field_lvs_melding_leerling_target_id = :uid ';
 						$query .= 'AND b.field_lvs_melding_betreft_value = :about ';
 						$query .= 'AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate ';
+						$query .= 'AND n.nid NOT IN (:pos) ';
 						$query .= 'ORDER BY d.field_lvs_melding_datum_feit_value ASC';
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['ticketing'][$soda_part] = db_query ( $query, array (
-								':uid' => $u->id,
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] [$soda_part] = db_query ( $query, array (
+								':uid' => $uid,
 								':about' => $soda_part,
+								':pos' => $data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] ['positief gedrag'],
 								':startdate' => $startdate,
 								':enddate' => $enddate 
 						) )->fetchAll ();
 						
-						$data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['total'] += count($data ['reports'] [$param1] [$u->id] ['tickets'] [$x] ['ticketing'][$soda_part] );
+						$data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['total'] += count ( $data ['reports'] [$param1] [$uid] ['tickets'] [$x] ['ticketing'] [$soda_part] );
 					}
 				}
 			}
@@ -438,7 +459,7 @@ function argus_soda_attesten_overview($param0 = NULL, $param1 = NULL) {
 						$data ['D'] [$c] [argus_get_user_realname ( $attestD->leerling )] ['tickets'] [$x] ['title'] = $periods [variable_get ( 'period_' . $y . '_shortname' )] ['fullname'];
 					}
 				}
-			
+				
 				$query = 'SELECT l.entity_id AS id, o.field_lvs_melding_onderwerp_value AS title, n.uid AS author, d.field_lvs_melding_datum_feit_value AS factdate, p.field_lvs_melding_prive_value AS private, v.field_lvs_melding_verslag_value AS report ';
 				$query .= 'FROM {field_data_field_lvs_melding_leerling} AS l ';
 				$query .= 'LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id ';
@@ -487,14 +508,49 @@ function argus_soda_setup_form($form, &$form_state) {
 			'#collapsed' => FALSE 
 	);
 	for($x = 1; $x < 5; $x ++) {
-		$form ['argus_soda_periods'] ['argus_soda_periods_' . $x] = array (
-				'#type' => 'select',
+		$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] = array (
+				'#type' => 'fieldset',
 				'#title' => t ( 'Periode D' . $x ),
-				'#multiple' => true,
-				'#options' => argus_engine_get_periods ( true ),
-				'#default_value' => variable_get ( 'argus_soda_periods_' . $x, NULL ),
-				'#description' => t ( 'Geef aan over welk soort periode het gaat, dit is nodig voor het opmaken van lijsten.' ) 
+				'#collapsible' => TRUE,
+				'#collapsed' => FALSE
 		);
+		
+			$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] ['argus_soda_periods_' . $x] = array (
+					'#type' => 'select',
+					'#title' => t ( 'Koppeling voor Periode D' . $x ),
+					'#multiple' => true,
+					'#options' => argus_engine_get_periods ( true ),
+					'#default_value' => variable_get ( 'argus_soda_periods_' . $x, NULL ),
+					'#description' => t ( 'Geef aan over welk soort periode het gaat, dit is nodig voor het opmaken van lijsten.' ) 
+			);
+			
+			$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] ['argus_soda_periods_comments_' . $x] = array (
+					'#type' => 'fieldset',
+					'#title' => t ( 'Commentaren' ),
+					'#collapsible' => TRUE,
+					'#collapsed' => FALSE
+			);
+				$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] ['argus_soda_periods_comments_' . $x] ['argus_soda_periods_comments_' . $x . '_0B'] = array (
+						'#type' => 'textfield',
+						'#title' => t ( 'Geen enkele B' ),
+						'#default_value' => variable_get ( 'argus_soda_periods_comments_' . $x . '_0B', 'Je bent goed op weg naar een SODA-attest!' ),
+				);
+				$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] ['argus_soda_periods_comments_' . $x] ['argus_soda_periods_comments_' . $x . '_1B'] = array (
+						'#type' => 'textfield',
+						'#title' => t ( '1 x B' ),
+						'#default_value' => variable_get ( 'argus_soda_periods_comments_' . $x . '_1B', 'Goed gewerkt, jammer van die ene B...' ),
+				);
+				$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] ['argus_soda_periods_comments_' . $x] ['argus_soda_periods_comments_' . $x . '_2B'] = array (
+						'#type' => 'textfield',
+						'#title' => t ( '2 x B' ),
+						'#default_value' => variable_get ( 'argus_soda_periods_comments_' . $x . '_2B', 'Wat is er gebeurd? Praat met je klastitularis!' ),
+				);
+				$form ['argus_soda_periods'] ['argus_soda_periods_fs_' . $x] ['argus_soda_periods_comments_' . $x] ['argus_soda_periods_comments_' . $x . '_34B'] = array (
+						'#type' => 'textfield',
+						'#title' => t ( 'Meer dan 2 B\'s' ),
+						'#default_value' => variable_get ( 'argus_soda_periods_comments_' . $x . '_34B', 'Sorry, zo lukt het niet; jij wil toch ook graag een attest!' ),
+				);
+		
 	}
 	
 	$form ['argus_soda_resetReports'] = array (
@@ -580,6 +636,8 @@ function argus_soda_resetReports_form_submit($form, &$form_state) {
 					$cntReportNew ++;
 				}
 				
+				$countB = 0;
+				
 				/* ---------- Calculate 'Stiptheid' - S ---------- */
 				if (module_exists ( 'argus_afwezigheden' )) {
 					/* CHECK: +2 x te laat komen */
@@ -589,21 +647,20 @@ function argus_soda_resetReports_form_submit($form, &$form_state) {
 					$total = 0;
 					foreach ( $codes as $code ) {
 						$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND am = :code AND datum BETWEEN :startdate AND :enddate';
-						$result = db_query ( $query, array (
+						$total += db_query ( $query, array (
 								':uid' => $pupil,
 								':code' => $code,
 								':startdate' => $startdate,
 								':enddate' => $enddate 
-						) );
-						$total += $result->rowCount ();
+						) )->rowCount ();
+						
 						$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND pm = :code AND datum BETWEEN :startdate AND :enddate';
-						$result = db_query ( $query, array (
+						$total += db_query ( $query, array (
 								':uid' => $pupil,
 								':code' => $code,
 								':startdate' => $startdate,
 								':enddate' => $enddate 
-						) );
-						$total += $result->rowCount ();
+						) )->rowCount ();
 					}
 					
 					$value = 'A';
@@ -618,85 +675,152 @@ function argus_soda_resetReports_form_submit($form, &$form_state) {
 					$total = 0;
 					foreach ( $codes as $code ) {
 						$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND am = :code AND datum BETWEEN :startdate AND :enddate';
-						$result = db_query ( $query, array (
+						$total += db_query ( $query, array (
 								':uid' => $pupil,
 								':code' => $code,
 								':startdate' => $startdate,
 								':enddate' => $enddate 
-						) );
-						$total += $result->rowCount ();
+						) )->rowCount ();
+						
 						$query = 'SELECT id FROM {argus_lvs_afwezigheden} AS a WHERE a.leerling = :uid AND pm = :code AND datum BETWEEN :startdate AND :enddate';
-						$result = db_query ( $query, array (
+						$total += db_query ( $query, array (
 								':uid' => $pupil,
 								':code' => $code,
 								':startdate' => $startdate,
 								':enddate' => $enddate 
-						) );
-						$total += $result->rowCount ();
+						) )->rowCount ();
 					}
 					
+					$value = 'A';
 					if ($total) {
 						$value = 'B';
-                                        }
-
+					}
+					
+					if ($value == 'B'){
+		    			$countB++;
+					}
+					
 					$node->field_soda_stiptheid [LANGUAGE_NONE] [0] ['value'] = $value;
+				}
+				
+				/* ---------- Calculate 'positief gedrag' ---------- */
+				if (module_exists ( 'argus_meldingen' )) {
+					/* Retrieve reports on positive behaviour in each phase */
+					$query = 'SELECT n.nid AS id FROM {node} AS n 
+							LEFT JOIN {field_data_field_lvs_melding_leerling} AS l ON l.entity_id = n.nid 
+							LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id 
+							LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id 
+							WHERE l.field_lvs_melding_leerling_target_id = :uid 
+							AND b.field_lvs_melding_betreft_value = :about 
+							AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate 
+							GROUP BY n.uid';
+					$positives = db_query ( $query, array (
+							':uid' => $pupil,
+							':about' => 'positief gedrag',
+							':startdate' => $startdate,
+							':enddate' => $enddate 
+					) )->fetchCol();
+					
+					if (count($positives) == 0){
+						$positives = array('x');
+					}
 				}
 				
 				/* ---------- Calculate 'Orde' - O ---------- */
 				if (module_exists ( 'argus_meldingen' )) {
 					/* Retrieve reports on negative behaviour in each phase */
-					$query = 'SELECT l.entity_id AS id FROM {field_data_field_lvs_melding_leerling} AS l LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id LEFT JOIN {node} AS n ON l.entity_id = d.entity_id WHERE l.field_lvs_melding_leerling_target_id = :uid AND b.field_lvs_melding_betreft_value = :about AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate GROUP BY n.uid';
+					$query = 'SELECT n.nid AS id, COUNT(n.nid) AS tickets FROM {node} AS n 
+							LEFT JOIN {field_data_field_lvs_melding_leerling} AS l ON l.entity_id = n.nid 
+							LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id 
+							LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id 
+							WHERE l.field_lvs_melding_leerling_target_id = :uid 
+							AND b.field_lvs_melding_betreft_value = :about 
+							AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate 
+							GROUP BY n.uid';
 					$result = db_query ( $query, array (
 							':uid' => $pupil,
 							':about' => 'orde (SODA)',
 							':startdate' => $startdate,
 							':enddate' => $enddate 
-					) );
-					$total = $result->rowCount ();
+					) )->fetchAllKeyed();
+					
+					$total = 0;
+					foreach ($result as $tickets){
+						if ($tickets > 1){
+							$total++;
+						}
+					}
 					
 					if ($total > 1) {
 						$node->field_soda_orde [LANGUAGE_NONE] [0] ['value'] = 'B';
+		    			$countB++;
 					} else {
-                                                $node->field_soda_orde [LANGUAGE_NONE] [0] ['value'] = 'A';
-                                        }
+						$node->field_soda_orde [LANGUAGE_NONE] [0] ['value'] = 'A';
+					}
 				}
 				
 				/* ---------- Calculate 'Discipline' - D ---------- */
 				if (module_exists ( 'argus_meldingen' )) {
 					/* Retrieve reports on negative behaviour in each phase */
-					$query = 'SELECT l.entity_id AS id FROM {field_data_field_lvs_melding_leerling} AS l LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id WHERE l.field_lvs_melding_leerling_target_id = :uid AND b.field_lvs_melding_betreft_value = :about AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate';
-					$result = db_query ( $query, array (
+					$query = 'SELECT n.nid AS id FROM {node} AS n 
+							LEFT JOIN {field_data_field_lvs_melding_leerling} AS l ON l.entity_id = n.nid
+							LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id 
+							LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id 
+							WHERE l.field_lvs_melding_leerling_target_id = :uid 
+							AND b.field_lvs_melding_betreft_value = :about 
+							AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate';
+					$total = db_query ( $query, array (
 							':uid' => $pupil,
 							':about' => 'discipline (SODA)',
 							':startdate' => $startdate,
 							':enddate' => $enddate 
-					) );
-					$total = $result->rowCount ();
+					) )->rowCount ();
 					
 					if ($total) {
 						$node->field_soda_discipline [LANGUAGE_NONE] [0] ['value'] = 'B';
+		    			$countB++;
 					} else {
-                                                $node->field_soda_discipline [LANGUAGE_NONE] [0] ['value'] = 'A';
-                                        }
+						$node->field_soda_discipline [LANGUAGE_NONE] [0] ['value'] = 'A';
+					}
 				}
 				
 				/* ---------- Calculate 'Attitude' - A ---------- */
 				if (module_exists ( 'argus_meldingen' )) {
 					/* Retrieve reports on negative behaviour in each phase */
-					$query = 'SELECT l.entity_id AS id FROM {field_data_field_lvs_melding_leerling} AS l LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id WHERE l.field_lvs_melding_leerling_target_id = :uid AND b.field_lvs_melding_betreft_value = :about AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate';
-					$result = db_query ( $query, array (
+					$query = 'SELECT n.nid AS id FROM {node} AS n 
+							LEFT JOIN {field_data_field_lvs_melding_leerling} AS l ON l.entity_id = n.nid
+							LEFT JOIN {field_data_field_lvs_melding_betreft} AS b ON l.entity_id = b.entity_id 
+							LEFT JOIN {field_data_field_lvs_melding_datum_feit} AS d ON l.entity_id = d.entity_id 
+							WHERE l.field_lvs_melding_leerling_target_id = :uid 
+							AND b.field_lvs_melding_betreft_value = :about 
+							AND d.field_lvs_melding_datum_feit_value BETWEEN :startdate AND :enddate 
+							AND n.nid NOT IN (:pos)
+							GROUP BY n.uid';
+					$total = db_query ( $query, array (
 							':uid' => $pupil,
 							':about' => 'attitude (SODA)',
+							':pos' => $positives,
 							':startdate' => $startdate,
 							':enddate' => $enddate 
-					) );
-					$total = $result->rowCount ();
+					) )->rowCount ();
 					
 					if ($total) {
 						$node->field_soda_attitude [LANGUAGE_NONE] [0] ['value'] = 'B';
+		    			$countB++;
 					} else {
 						$node->field_soda_attitude [LANGUAGE_NONE] [0] ['value'] = 'A';
 					}
+				}
+				
+				// Set automatic commenting
+				if ( $countB == 0 ){
+					$node->body [LANGUAGE_NONE] [0] ['value'] = variable_get( 'argus_soda_periods_comments_' . $x . '_0B' );
+				} elseif ( $countB == 1 ){
+					$node->body [LANGUAGE_NONE] [0] ['value'] = variable_get( 'argus_soda_periods_comments_' . $x . '_1B' );
+				} elseif ( $countB == 2 ){
+					$node->body [LANGUAGE_NONE] [0] ['value'] = variable_get( 'argus_soda_periods_comments_' . $x . '_2B' );
+				} elseif ( $countB > 2 ){
+					$node->body [LANGUAGE_NONE] [0] ['value'] = variable_get( 'argus_soda_periods_comments_' . $x . '_34B' );
 				}
 				
 				node_save ( $node );
@@ -731,10 +855,10 @@ function argus_soda_attest_set() {
  *
  * @param $uid int
  *        	User id
- *        
+ *        	
  * @param $update boolean
  *        	Set true if database must be updated
- *        
+ *        	
  *        	
  * @return array int
  */
@@ -751,7 +875,7 @@ function argus_soda_get_report($uid, $update = false) {
 		$report = array ();
 		foreach ( $parts as $part ) {
 			for($x = 1; $x < 5; $x ++) {
-				$report [$part] [$x] = '-';
+				$report [$part] [$x] = '';
 			}
 		}
 		
@@ -820,11 +944,11 @@ function argus_soda_get_report($uid, $update = false) {
 				':uid' => $uid 
 		) )->fetchAll ()) {
 			if ($endresult != $n [0]->attest) {
-				if ($update || $endresult != 'D'){
+				if ($update || $endresult != 'D') {
 					$query = 'UPDATE {argus_soda_attest} AS a SET a.attest = :attest WHERE a.leerling = :uid';
 					db_query ( $query, array (
 							':uid' => $uid,
-							':attest' => $endresult,
+							':attest' => $endresult 
 					) );
 				} else {
 					$endresult = $n [0]->attest . '<span style="font-size: 10px; font-style: italic;">(' . $endresult . ')</span>';
@@ -887,7 +1011,7 @@ function argus_soda_save_attest($uid, $options = array()) {
  *        	
  * @param $mode string
  *        	Modus for display: 'view', 'edit'
- *        
+ *        	
  * @param $update boolean
  *        	TRUE or FALSE for update database
  */
@@ -938,7 +1062,7 @@ function argus_soda_show_report($uid, $comments = TRUE, $mode = 'view', $update 
 			}
 			
 			if ($mode == 'edit') {
-				if (array_key_exists($x, $report ['id'])){
+				if (array_key_exists ( $x, $report ['id'] )) {
 					$returnStr .= '<td style="vertical-align: top; text-align: left;"><a href="' . base_path () . 'node/' . $report ['id'] [$x] . '/edit?destination=' . base_path () . current_path () . '#' . $uid . '" target="_blank">' . t ( 'bewerken' ) . '</a></td>';
 				} else {
 					$returnStr .= '<td></td>';
