@@ -1,5 +1,10 @@
 **Releases:
 
+v7.x-1.2
+---------
+- Better rendering of reports
+- Fixes in calculations
+
 v7.x-1.1
 ---------
 - Fix in recalculate attest
